Add Images and index changes

--- a/CSS - My Site/css/styles.css
+++ b/CSS - My Site/css/styles.css
@@ -32,4 +32,9 @@ h1{
   background-color: blue;
 }
 
+
+.dev{
+  text-decoration: underline;
+}
+
 /*********************************** ID SELECTORS ***********************************/
